# moocs-collect

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  biome.json  biome.jsonc  clippy.toml  drizzle.config.ts  index.html  package.json  panda.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml  publish-app.yml  publish-cli.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: index.html  package.json  tsconfig.app.json
apps/desktop/src/: index.css  routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/migrations/: 0000_superb_monster_badoon.sql
apps/desktop/src-tauri/migrations/meta/: 0000_snapshot.json  _journal.json
apps/desktop/src-tauri/src/: lib.rs  state.rs
apps/desktop/src-tauri/src/command/: download_slides.rs  get_archive_years.rs  get_courses.rs  get_credential.rs  get_lectures.rs  get_pages.rs  get_recorded_courses.rs  login.rs  mod.rs  purge_index.rs  search_slides.rs
apps/desktop/src-tauri/src/db/: migrator.rs  mod.rs
apps/desktop/src-tauri/src/search/: analyzers.rs  filter.rs  highlighter.rs  index.rs  query.rs  schema.rs  service.rs  types.rs
apps/desktop/src/command/: download-slides.ts  get-archive-years.ts  get-courses.ts  get-credential.ts  get-lectures.ts  get-pages.ts  purge-index.ts  search-slides.ts
apps/desktop/src/components/providers/: jotai.tsx  tanstack-router.tsx  theme.tsx  updater.tsx
apps/desktop/src/components/ui/: progress.tsx  tree-select.tsx
apps/desktop/src/components/ui/styled/: toast.tsx  tree-view.tsx
apps/desktop/src/features/auth/components/: login-form.tsx
apps/desktop/src/features/auth/pages/: login.tsx
apps/desktop/src/features/course/atoms/: check.ts  course.ts  lecture.ts  page.ts  year.ts
apps/desktop/src/features/course/components/: column.tsx  course-list.tsx  download.tsx  lecture-list.tsx  list-item.tsx  page-list.tsx  year-select.tsx
apps/desktop/src/features/course/pages/: course.tsx
apps/desktop/src/recipes/: checkbox.ts  progress.ts
apps/desktop/src/routes/: __root.tsx  _authenticated.tsx  login.tsx
apps/desktop/src/routes/-components/: sidebar.tsx
apps/desktop/src/routes/_authenticated/: download.tsx  index.tsx  search.tsx  settings.tsx
apps/desktop/src/utils/: atom.ts  cache.ts  store.ts  types.ts
apps/merge/: Cargo.toml
apps/merge/src/: main.rs
apps/website/: biome.jsonc  package.json  vite.config.ts
apps/website/src/: index.css  root.tsx  window.d.ts
apps/website/src/components/: download-button.tsx  download-section.tsx
apps/website/src/framework/: entry.browser.tsx  entry.rsc.tsx  entry.ssr.tsx
apps/website/src/types/: release.ts
apps/website/src/utils/: detect-os.ts  get-release.ts
collect-cli/: Cargo.toml
collect-cli/src/: main.rs  pdf.rs
collect-core/: Cargo.toml
collect-core/examples/: basic_usage.rs
collect-core/src/: cache.rs  error.rs  iniad.rs  lib.rs  moocs.rs  pdf.rs  svg.rs  utils.rs
collect-core/src/domain/models/: course.rs  credentials.rs  lecture.rs  page.rs  slide.rs  urls.rs
collect-core/src/domain/repository/: course.rs
collect-core/src/domain/service/: course.rs  mod.rs
collect-core/src/pdf/: mime.rs  mod.rs
collect-core/src/repository/: course.rs
collect-core/src/service/: course.rs  lecture.rs  page.rs
patches/: @park-ui__panda-preset.patch
src/: app.tsx  error.rs  lib.rs  main.tsx  routeTree.gen.ts  utils.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20250321173837_cache.sql
src-tauri/src/: command.rs  db.rs  lib.rs  migrations.rs  state.rs  store.rs
src-tauri/src/command/: download_slides.rs  get_courses.rs  get_lectures.rs  get_pages.rs  get_settings.rs  get_slides.rs  login.rs  mod.rs  search_slides.rs
src-tauri/src/db/: mod.rs
src-tauri/src/search/: index.rs  mod.rs  query.rs  schema.rs  service.rs  types.rs
src/command/: download-slides.ts  get-courses.ts  get-lectures.ts  get-pages.ts  get-recorded-courses.ts  get-settings.ts  get-slides.ts  login.ts  search-slides.ts  utils.ts
src/components/providers/: index.tsx  updater.tsx
src/components/ui/providers/: jotai.tsx
src/domain/: mod.rs
src/domain/models/: course.rs  keys.rs  lecture.rs  mod.rs  page.rs  slide.rs
src/domain/repository/: auth.rs  course.rs  lecture.rs  page.rs  slide.rs
src/domain/service/: auth.rs  page.rs  slide.rs
src/features/auth/atoms/: authenticated.ts
src/features/auth/components/: login-form.tsx
src/features/auth/pages/: login.tsx
src/features/course/atoms/: check.ts  course.ts  lecture.ts  page.ts
src/features/course/components/: course-list.tsx  download.tsx  lecture-list.tsx  list-item.tsx  page-list.tsx
src/features/course/pages/: course.tsx
src/features/course/schemas/: course.ts  lecture.ts  page.ts
src/features/course/services/: courses.ts  lectures.ts  pages.ts
src/features/download/atoms/: queue.ts
src/features/download/components/: completed.tsx  empty.tsx  error.tsx  in-queue.tsx  list-item.tsx
src/features/download/pages/: download.tsx
src/features/download/services/: download-slides.ts
src/features/search/atoms/: search.ts
src/features/search/components/: search-form.tsx  search-result-item.tsx  search-results.tsx
src/features/search/pages/: search.tsx
src/features/search/services/: search.ts
src/features/settings/atoms/: settings.ts  year.ts
src/features/settings/components/: settings-form.tsx
src/features/settings/schemas/: settings.ts
src/features/settings/services/: settings.ts
src/pdf/: error.rs  mime.rs  mod.rs
src/recipes/: index.ts
src/repository/: auth.rs  course.rs  lecture.rs  mod.rs  page.rs  slide.rs
src/routes/: __root.tsx  _authenticated.tsx  index.tsx
src/routes/-components/: sidebar.tsx
src/routes/_authenticated/: download.tsx  index.tsx
src/service/: auth.rs  course.rs  lecture.rs  page.rs
src/utils/: atom.ts
(+25 files in other folders)
