[package]
name = "collect"
version = "0.2.1"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22.1"
lol_html = "2.2.0"
regex = "1.10.4"
scraper = { version = "0.23.1", features = ["atomic"] }
unicode_escape = "0.1.0"
bytes = "1.10.0"
svg2pdf = { version = "0.13" }
lopdf = "0.35.0"
async-trait = "0.1.88"
image = "0.25.6"
infer = "0.19.0"
html-escape = "0.2"

[workspace]
members = [
    "apps/cli",
    "apps/desktop/src-tauri",
]
default-members = ["apps/cli"]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.12.13", features = ["cookies", "gzip"] }
anyhow = "1.0.97"
tokio = { version = "1.37.0", features = ["rt", "net", "macros", "rt-multi-thread"] }
futures = "0.3.31"
rayon = "1.10.0"
bitflags = "2.9.0"
thiserror = "2.0"
