[package]
name = "collect"
version = "0.2.1"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22.1"
lol_html = "2.2.0"
regex = "1.10.4"
scraper = { version = "0.23.1", features = ["atomic"] }
unicode_escape = "0.1.0"
bytes = "1.10.0"
svg2pdf = { version = "0.13" }
lopdf = "0.35.0"
async-trait = "0.1.88"
image = "0.25.6"
infer = "0.19.0"
html-escape = "0.2"

[workspace]
members = [
    "apps/cli",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.12.13", features = ["cookies", "gzip"] }
anyhow = "1.0.97"
tokio = { version = "1.37.0", features = ["rt", "net", "macros", "rt-multi-thread"] }
futures = "0.3.31"
rayon = "1.10.0"
bitflags = "2.9.0"
thiserror = "2.0"

[workspace.lints.clippy]
# まずは基本セットを警告に
all      = "warn"
# 過激すぎるものもあるので pedantic/nursery は様子見で warn
pedantic = { level = "warn", priority = 0 }
nursery  = { level = "warn", priority = 0 }
# “制限系(restriction)” はまず無効。必要な個別ルールだけ下で明示許可/禁止
restriction = "allow"

# 事故りやすいものは個別に厳しく（グループより優先）
unwrap_used   = { level = "deny", priority = 2 }
expect_used   = { level = "deny", priority = 2 }
panic         = { level = "deny", priority = 2 }
todo          = { level = "deny", priority = 2 }
unimplemented = { level = "deny", priority = 2 }
dbg_macro     = { level = "deny", priority = 2 }
print_stdout  = { level = "deny", priority = 2 }
print_stderr  = { level = "deny", priority = 2 }
