[package]
name = "collect-core"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
base64 = "0.22.1"
lol_html = "1.2.1"
regex = "1.10.4"
scraper = { version = "0.19.0", features = ["atomic"] }
unicode_escape = "0.1.0"
