[package]
name = "collect-cli"
version = "1.0.1"
edition = "2021"

[dependencies]
collect = { path = "../.." }
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11.0"
indicatif = "0.17.8"
keyring = { version = "3.6.2", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
