[package]
name = "app"
version = "0.0.3"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dependencies]
collect = { path = "../../../packages/collect" }
reqwest = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio", "sqlite"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
keyring = { version = "3.6.2", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
tauri-plugin-process = "2"
tantivy = "0.25"
lindera = { version = "1.2", features = ["embedded-unidic"] }
lindera-tantivy = { version = "1.0", features = ["embedded-unidic"] }
unicode-normalization = "0.1.24"
tauri-plugin-opener = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
